cabal-version:      2.4
name:               build-failure
version:            0.1.0.0

author:             John Ky
maintainer:         john.ky@iohk.io

extra-source-files: CHANGELOG.md

executable build-failure
    main-is:          Main.hs
    build-depends:    base ^>=4.12.0.0
                    , iohk-monitoring
    hs-source-dirs:   app
    default-language: Haskell2010
